# Ride-hailing

./: .env  .gitignore  Anchor.toml  Cargo.toml  README.md  diesel.toml  package-lock.json  package.json
docs/: websocket-flow.md
logic/: Cargo.toml  config.rs  types.ignore
logic/src/: config.rs  lib.rs  main.rs  schema.rs
logic/src/api/: admin.rs  drivers.rs  mod.rs  riders.rs  trips.rs
logic/src/db/: mod.rs  pool.rs
logic/src/services/: escrow.rs  matching.rs  mod.rs  notifications.rs  paystack.rs  pricing.rs
logic/tests/: unit.rs
migrations/2025-11-29-071859-0000_create_riders/: down.sql  up.sql
migrations/2025-11-29-074936-0000_create_drivers/: down.sql  up.sql
migrations/2025-11-29-075322-0000_create_ride_request/: down.sql  up.sql
migrations/2025-11-29-081829-0000_create_trips/: down.sql  up.sql
migrations/2025-12-13-125212-0000_update_riders_column/: down.sql  up.sql
migrations/2025-12-13-125335-0000_update_drivers_column/: down.sql  up.sql
migrations/2025-12-15-110048-0000_update_trips/: down.sql  up.sql
migrations/2025-12-16-215846-0000_update_trips/: down.sql  up.sql
migrations/2026-02-06-004911-0000_add_zazu_columns_to_ride_request/: down.sql  up.sql
mobile/: App.tsx  README.md  app.json  package.json
mobile/src/screens/: AccountScreen.tsx
programs/ride_program/: Anchor.toml  Cargo.toml
programs/ride_program/src/: lib.rs
programs/ride_program/tests/: ride.test.ts
scripts/: seed_test_drivers.sh  setup.sh  simulate_driver.sh
web/: README.md  app.json  package-lock.json  package.json
web/app/: _layout.tsx  index.tsx
web/app/(tabs)/: _layout.tsx  account.tsx  activity.tsx  home.tsx
web/app/onboarding/: index.tsx
web/assets/: assetsData.tsx
web/components/: App.tsx  WalletProvider.tsx
