[package]
name = "logic"
version = "0.1.0"
edition = "2021"

# If you want to run this as a server (cargo run)
default-run = "logic"

[dependencies]
# Web framework
actix-web = "4"            # HTTP server & routing
actix-rt = "2"             # Async runtime for Actix


# Serialization / Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

diesel = { version = "2.1", features = ["postgres"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Utilities
uuid = { version = "1", features = ["v4"] }   # For IDs
chrono = "0.4"                                # For timestamps

# Solana interaction (if backend will talk to Solana RPC)
anchor-client = "0.31.1"
solana-sdk = "2.0.25"
solana-program = "2.0.25"
solana-client = "2.0.25"



# Testing (only used when you run cargo test)
[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] } # For API integration tests
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }

