[package]
name = "ride_program"
version = "0.1.0"
edition = "2021"

[lib]
name = "ride_program"
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "=0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
anchor-attribute-program = "=0.32.1"
anchor-derive-accounts = "=0.32.1"
solana-program-entrypoint = "=2.3.0"




[dev-dependencies]
litesvm = "0.8.1"
